src/components/carousel/Carousel.css
/* ----------- */
/* Hero Section*/
/* ----------- */

.hero__wrapper {
  inline-size: min(98%, 1400px);
  margin-block-end: var(--spacing-14);
  margin-inline: auto;
}

.hero__slider {
  inline-size: 100%;
  margin-inline: auto;
  position: relative;
}

.carousel {
  inline-size: 100%;
  display: flex;
  position: relative;
  overflow: hidden;
  overflow-x: scroll;
  gap: 10px;
  scroll-snap-type: x mandatory;
  padding-block-end: 1rem;
  scroll-behavior: smooth;
}

.carousel::-webkit-scrollbar {
  opacity: 0;
  pointer-events: none;
}

.carousel__item {
  inline-size: inherit;
  block-size: inherit;
  background-color: var(--surface3);
  color: var(--text1);
  min-inline-size: 100%;
  scroll-snap-align: center;
  box-shadow: 0 0 5px rgba(0, 0, 0, 10%);
}

.carousel-slide {
  padding-block: 5rem;
}

.carousel-slide__info {
  margin-inline: auto;
  margin-inline-start: auto;
  text-align: center;
  grid-template-columns: minmax(0, 1fr);
  justify-items: center;
  gap: 0;
}

.carousel-slide__description {
  max-inline-size: 28ch;
  margin-block-start: 0.3rem;
  margin-inline: auto;
}

.carousel-slide__name {
  font-size: var(--fs-800);
  line-height: 1.1;
}

.carousel-slide__label {
  text-transform: uppercase;
  letter-spacing: 3.5px;
}

.move-left,
.move-right {
  position: absolute;
  z-index: 10;
  inset-block-start: 50%;
  transform: translateY(-50%);
  padding-inline: 0.2rem;
  padding-block: 0.3rem;
  margin-inline: 0.1rem;
  border-radius: 6px;
  cursor: pointer;
}

.move-left {
  inset-inline-start: 0;
}

.move-right {
  inset-inline-end: 0;
}

.carousel-slide__btn {
  margin-block-start: 1rem;
  background-color: var(--brand);
}

/* ------------- */
/* Media Queries */
/* ------------- */

@media (max-width: 299px) {
  .carousel-slide__name {
    font-size: var(--fs-700);
    line-height: 1.1;
  }

  .carousel-slide__btn {
    block-size: 40px;
  }
}

@media (min-width: 600px) {
  .carousel-slide__info {
    margin-inline: unset;
    margin-inline-end: 3rem;
    transform: translateY(2rem);
    margin-inline-start: auto;
  }
}

@media (min-width: 1000px) {
  .carousel-slide__info {
    max-inline-size: 60ch;
    text-align: left;
  }

  .carousel-slide__name {
    font-size: var(--fs-900-small);
  }

  .carousel-slide__description {
    max-inline-size: unset;
  }

  .carousel-slide {
    padding-block: 7rem;
  }

  .carousel-slide__info {
    justify-items: start;
  }
}

